fix palmdrive align and fix fruito bugs

--- a/src/component/Work/css/work.css
+++ b/src/component/Work/css/work.css
@@ -217,9 +217,11 @@ h5{
 
 .main {
 	margin-left: 406px;
-  padding-right: 40px;
 	width:700px;
   margin-top: 100px;
+}
+.palmdrive-main {
+  padding-right: 40px;
 }
 h3{
   font-family: "Montserrat-Regular","Montserrat";
